Fix gravity forms datepicker
Select box text color is too light- darken and change weight

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: http://www.bellevuecollege.edu/its/
 Description: The Bellevue College Theme
 Author: Bellevue College Integration
 Author URI: http://www.bellevuecollege.edu
-Version: 2.14.0.2
+Version: 2.14.0.3
 GitHub Theme URI: bellevuecollege/mayflower
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -372,6 +372,11 @@ ul.header-social-links li {
 	}
 }
 
+// Date Picker text color
+.ui-datepicker-title select {
+	color: #000;
+	font-weight: normal;
+}
 
 /* ####################################### */
 /* ----- Navigation/widget areas styles ----- */
